--- a/metodologia.tex
+++ b/metodologia.tex
@@ -1,6 +1,9 @@
 \chapter{Metodologia (ou Experimentos?))}\label{cap:metodologia}
+\ano{apresenta dados comuns a todos os experimentos: descrição dos datasets e
+highlights(muitas classes etc.), classificadores empregados, método de validação cruzada}
+
 Foi empreendida uma avaliação experimental para comprovação empírica das contribuições
-citadas no Capítulo \ref{cap:contrib}.
+citadas no Capítulo \ref{cap:contrib} \ano{<- rever}.
 
 % Classificadores com boa performance com poucos dados
 % podem ter baixa performance com muitos dados
