--- a/tese.tex
+++ b/tese.tex
@@ -229,15 +229,13 @@
 \renewcommand{\sectionmark}[1]{\markright{\thesection \ #1}}
 
 %Capitulos
-\input introducao %overview AL, (ELM?)
-% % \include{al} %estrats, experimentos de exemplo, limitações (que vou superar)
-% % \include{elm} %review; instab. etc.; p/ ap. interativo; exps mostrando runtime
-% % \include{SG-multi}
-% % \include{conclusao}
-\input active-learning
+\input introducao
+\input contexto
 \input propostas
 \input metodologia
-\input resultados
+\input exp-analise
+\input exp-elm
+\input exp-meta
 \input conclusao
 \appendix
 \input apendice1
