mais reorg e descr da estrut do texto

--- a/active-learning.tex
+++ b/active-learning.tex
@@ -216,6 +216,8 @@ ou seja, aquele com a menor $P_{max}(\bm{x})$,
 com o intuito de se explorar a fronteira de decisão no espaço de exemplos.
 A complexidade dessa estratégia é $\mathcal{O}(1)$ - equivalente a apenas um treinamento por consulta.
 
+\ano{explicar estrategias margem e entropia}
+
 \subsection{Busca no espaço de hipóteses}
 É possível fazer uma amostragem ativa baseada na perspectiva do espaço de hipóteses.
 A intuição dessa abordagem é que os exemplos mais importantes residem na região onde
@@ -404,6 +406,8 @@ $sim(\bm{x},\bm{u})$ pela seguinte fórmula:
 
 A ordem de complexidade é $\mathcal{O}(1)$, se os $|\mathcal{U}|^2$ cálculos de distância forem
 devidamente armazenados em memória para futuro acesso rápido.
+
+\ano{expoentes ponderadores nem são mencionados}
 
 \subsection{Amostragem por agrupamento}
 O processo de aprendizado pode explorar agrupamentos naturais na \pool,
