--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -1,5 +1,5 @@
-\chapter{Viabilidade do Aprendizado Ativo}
-\ano{Análise Comparativa}
+\chapter{Análise Comparativa}\label{analise}
+\ano{dizer em algum lugar que demonstra a Viabilidade do Aprendizado Ativo}
 
 \ano{neste e nos outros 2 caps de resultados vão aparecer apenas dados
 das strats mais importantes;
