--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -1,4 +1,4 @@
-\chapter{Máquinas Extremas de Aprendizado Ativo}
+\chapter{Máquinas Extremas de Aprendizado Ativo}\label{ealm}
 A código das adaptações apresentadas nas próximas seções e outras variantes
 está disponível publicamente \citep{doi/elm}.
 
