--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -1,4 +1,4 @@
-\chapter{Aprendizado Meta-ativo}
+\chapter{Aprendizado Meta-ativo}\label{aml}
 \subsection{Meta-estratégia}
 \ano{\citep{conf/ijcnn/SoutoPSACLS08}, sobre clustering,
 usam ranking médio como default:
