--- a/metodologia.tex
+++ b/metodologia.tex
@@ -1,9 +1,11 @@
-\chapter{Metodologia (ou Experimentos?))}\label{cap:metodologia}
+\chapter{Metodologia}\label{metodologia}
 \ano{apresenta dados comuns a todos os experimentos: descrição dos datasets e
-highlights(muitas classes etc.), classificadores empregados, método de validação cruzada}
+highlights(muitas classes etc.), classificadores empregados, método de validação
+cruzada}
 
+\ano{rever texto}
 Foi empreendida uma avaliação experimental para comprovação empírica das contribuições
-citadas no Capítulo \ref{cap:contrib} \ano{<- rever}.
+citadas no Capítulo \ref{contrib} \ano{<- rever}.
 
 % Classificadores com boa performance com poucos dados
 % podem ter baixa performance com muitos dados
