--- a/introducao.tex
+++ b/introducao.tex
@@ -29,10 +29,12 @@ justificadas em função da contribuição principal}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \section{Contribuição}\label{contribuicao}
-
+\esb{cita os artigos/software publicados e submetidos; menciona
+metodologia, compara com Everton e de que forma organiza a área}
 
 \section{Cenário}\label{sec:cenarios}
-Existem três principais cenários na literatura de aprendizado ativo \citep{settles2010active}:
+Existem três principais cenários na literatura de aprendizado ativo
+\citep{settles2010active}:
 \textit{síntese de consulta por associação} ou
 \ing{consulta de exemplos sintetizados}{membership query synthesis};
 \ing{amostragem baseada em \pool}{pool-based sampling}; e
@@ -67,13 +69,23 @@ decorre de o fato do processo ativo de amostragem não ser uma
 Uma consulta ótima depende de quantas ainda podem ser feitas.
 
 \section{Estrutura do documento}\label{estrutura}
+A notação matemática adotada e a revisão da literatura das áreas
+envolvidas neste trabalho são apresentadas no Capítulo \ref{contexto}.
+No Capítulo \ref{propostas},
+são apresentadas as propostas de adaptação de algoritmos
+e é explicada a organização por etapas dos demais capítulos de propostas.
+Essas etapas são uma sequência de pares proposta-experimento
+expostos nos capítulos \ref{analise}, \ref{ealm} e \ref{aml}
+com o intuito de manter a unidade de cada assunto.
+O Capítulo \ref{metodologia} contém detalhes de implementação
+da avaliação empírica que são comuns a todos os experimentos.
+Por fim, uma análise geral unificada da contribuição da tese e
+desdobramentos futuros são apresentados no
+Capítulo \ref{conclusao}.
+Detalhes sobre os cenários de aprendizado ativo, resultados,
+formatação, estilo e terminologia podem ser encontrados nos apêndices.
+\ano{mencionar apendice de rev. sistemática?}
 
-\ano{referenciar apendice de Formatação e estilo}
-Apêndice \ref{estilo}
-
-% % \newpage
-% \section{Capítulos}
-% Este documento está organizado maneira descrita a seguir.
 %
 % No Capítulo \ref{cap:classificacao}, é apresentada a notação utilizada neste trabalho juntamente com um texto introdutório sobre aprendizado supervisionado para contextualizar as duas revisões bibliográficas que o seguem: a primeira sobre \textit{ensembles} e a segunda sobre \textit{fluxos de dados}.
 % Ao final, \textit{ensembles} voltados especificamente a fluxos de dados são revisados.
