--- a/contexto.tex
+++ b/contexto.tex
@@ -1,4 +1,10 @@
 \chapter{Contexto} \label{contexto}
+\ano{
+explica que aprend. ativo é o foco,
+mas que a comparação conduz ao uso de ELM e ao metaaprendizado
+aprendizado ativo - introduz assunto e 
+}
+
 \ano{Aprendizado de máquina é a área que engloba algoritmos capazes de aprender
 sem programação explícita \citep{journals/cacm/Valiant84}.
 Diversas tarefas como \ano{tarefa 1, tarefa2, ... REFERENCIA} têm sido bem sucedidas atualmente.
