--- a/exp-elm.tex
+++ b/exp-elm.tex
@@ -2,14 +2,28 @@
 A código das adaptações apresentadas nas próximas seções e outras variantes
 está disponível publicamente \citep{doi/elm}.
 
-\subsection{IELM}
+\esb{estudo de caso para um dado learner}
+
+\tar{menciona inexistência da combinação de ELM e AL na literatura
+e mostra AL sendo melhor que aleat e nao muito pior que passiva;
+explorar resultados separadamente pra cada tipo de ELM}
+
+\tar{ impossível completar todas as bases, mas ok;
+quanto mais memória, mais datasets}
+
+\section{IELM}
 
 As propostas incrementais para IELM e CIELM mostraram-se
 positivamente impactadas pelo aprendizado ativo no experimento principal.
 % \subsection{EIELM}
-\subsection{CIELM}
-\subsection{nintera}
+\section{CIELM}
+\section{nintera}
 \ano{foi usado no segundo experimento preliminar para demonstrar viabilidade
 de AL com ELM \citep{santos2014viabilidade};
 e tb foi usado como metaclassificador no último experimento}
 \tar{citar apendice}
+
+\section{ExpELMChange}
+experimenta ExpELMChange
+(AL especifico pra nintera e/ou pra CIELM) -
+comparar com outras estrats.
