--- a/meta.tex
+++ b/meta.tex
@@ -1,3 +1,20 @@
 \section{Meta-aprendizado} \label{meta}
 
 teoria
+
+\ano{diferenciar do meta-aprendizado ativo do Prudêncio}
+
+\ano{recomendação de estratégia para base,
+budget e aprendiz dados [e qtd inicial de rótulos?]}
+
+\ano{escolhe uma dentre várias}
+
+\ano{escolhe cada uma contra random}
+
+\ano{mostra quando random é a melhor (interessante)}
+
+\ano{mostra quando random é a melhor ou empata}
+
+\ano{recomendação de aprendiz
+(NB,C45,etc. e ''não-use essa estrat.'' ou ''use aleatório'')
+para uma dada estratégia}
