--- a/metodologia.tex
+++ b/metodologia.tex
@@ -53,21 +53,24 @@ para cada base conforme literatura de classificação \cite{conf/pakdd/BouckaertF0
 No experimento definitivo,
 para viabilidade computacional e conforme literatura de aprendizado ativo 
 
-\subsection{Avaliação}\label{sec:cenario}
+\section{Avaliação}\label{sec:cenario}
 
 \ano{em algum momento preciso comparar com desempenho
 passivo (todos exemplos)); o experimento poderia continuar rodando até que
 a maior parte das bases tenha todas as estrtégias atingido o dese. passivo.}
 
-\subsubsection{Métricas}
+
+\subsection{Métricas}
 kappa:\citep{conf/pkdd/Shah11}
 accbal: \citep{journals/bmcbi/MassoV10}
 
 ALC \textit{Area under the Learning Curve} \citep{journals/jmlr/GuyonCDL11}
 
+\subsection{Validação}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Ferramentas}\label{sec:ferramentas}
+\section{Ferramentas}\label{sec:ferramentas}
 Foram utilizados um total de 188 núcleos\footnote{\textit{Núcleos} por simplicidade,
 mas na realidade cada computador oferecia diferentes unidades de processamento;
 sendo o outro tipo as \textit{threads} na nomenclatura da Intel.} de processamento:
