--- a/propostas.tex
+++ b/propostas.tex
@@ -127,3 +127,4 @@ A ordem de complexidade do \textit{SG-multi} é $\mathcal{O}(|Y|)$.
 \section{Balanced multiclasse?}
 
  
+\section{Considerações}
